@@ -64,6 +64,20 @@ name|commons
 operator|.
 name|io
 operator|.
+name|FileUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|io
+operator|.
 name|IOUtils
 import|;
 end_import
@@ -357,6 +371,24 @@ name|PUT_FILE
 init|=
 literal|"putfile"
 decl_stmt|;
+DECL|field|GET
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|GET
+init|=
+literal|"get"
+decl_stmt|;
+DECL|field|GET_FILE
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|GET_FILE
+init|=
+literal|"getfile"
+decl_stmt|;
 DECL|field|DOWNCONFIG
 specifier|private
 specifier|static
@@ -590,6 +622,14 @@ operator|+
 name|PUT_FILE
 operator|+
 literal|","
+operator|+
+name|GET
+operator|+
+literal|","
+operator|+
+name|GET_FILE
+operator|+
+literal|", "
 operator|+
 name|LIST
 operator|+
@@ -934,6 +974,32 @@ operator|+
 name|PUT_FILE
 operator|+
 literal|" /solr.xml /User/myuser/solr/solr.xml"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"zkcli.sh -zkhost localhost:9983 -cmd "
+operator|+
+name|GET
+operator|+
+literal|" /solr.xml"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"zkcli.sh -zkhost localhost:9983 -cmd "
+operator|+
+name|GET_FILE
+operator|+
+literal|" /solr.xml solr.xml.file"
 argument_list|)
 expr_stmt|;
 name|System
@@ -1928,6 +1994,204 @@ name|is
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+elseif|else
+if|if
+condition|(
+name|line
+operator|.
+name|getOptionValue
+argument_list|(
+name|CMD
+argument_list|)
+operator|.
+name|equals
+argument_list|(
+name|GET
+argument_list|)
+condition|)
+block|{
+name|List
+name|arglist
+init|=
+name|line
+operator|.
+name|getArgList
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|arglist
+operator|.
+name|size
+argument_list|()
+operator|!=
+literal|1
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"-"
+operator|+
+name|GET
+operator|+
+literal|" requires one arg - the path to get"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|exit
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+name|byte
+index|[]
+name|data
+init|=
+name|zkClient
+operator|.
+name|getData
+argument_list|(
+name|arglist
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+operator|new
+name|String
+argument_list|(
+name|data
+argument_list|,
+literal|"UTF-8"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|line
+operator|.
+name|getOptionValue
+argument_list|(
+name|CMD
+argument_list|)
+operator|.
+name|equals
+argument_list|(
+name|GET_FILE
+argument_list|)
+condition|)
+block|{
+name|List
+name|arglist
+init|=
+name|line
+operator|.
+name|getArgList
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|arglist
+operator|.
+name|size
+argument_list|()
+operator|!=
+literal|2
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"-"
+operator|+
+name|GET_FILE
+operator|+
+literal|"requires two args - the path to get and the file to save it to"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|exit
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+name|byte
+index|[]
+name|data
+init|=
+name|zkClient
+operator|.
+name|getData
+argument_list|(
+name|arglist
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|FileUtils
+operator|.
+name|writeByteArrayToFile
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|arglist
+operator|.
+name|get
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+argument_list|,
+name|data
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 finally|finally
