@@ -214,6 +214,30 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|zookeeper
+operator|.
+name|CreateMode
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|zookeeper
+operator|.
+name|KeeperException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|AfterClass
@@ -1669,6 +1693,301 @@ name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testGet
+specifier|public
+name|void
+name|testGet
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|getNode
+init|=
+literal|"/getNode"
+decl_stmt|;
+name|byte
+index|[]
+name|data
+init|=
+operator|new
+name|String
+argument_list|(
+literal|"getNode-data"
+argument_list|)
+operator|.
+name|getBytes
+argument_list|(
+literal|"UTF-8"
+argument_list|)
+decl_stmt|;
+name|this
+operator|.
+name|zkClient
+operator|.
+name|create
+argument_list|(
+name|getNode
+argument_list|,
+name|data
+argument_list|,
+name|CreateMode
+operator|.
+name|PERSISTENT
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|String
+index|[]
+name|args
+init|=
+operator|new
+name|String
+index|[]
+block|{
+literal|"-zkhost"
+block|,
+name|zkServer
+operator|.
+name|getZkAddress
+argument_list|()
+block|,
+literal|"-cmd"
+block|,
+literal|"get"
+block|,
+name|getNode
+block|}
+decl_stmt|;
+name|ZkCLI
+operator|.
+name|main
+argument_list|(
+name|args
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testGetFile
+specifier|public
+name|void
+name|testGetFile
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|getNode
+init|=
+literal|"/getFileNode"
+decl_stmt|;
+name|byte
+index|[]
+name|data
+init|=
+operator|new
+name|String
+argument_list|(
+literal|"getFileNode-data"
+argument_list|)
+operator|.
+name|getBytes
+argument_list|(
+literal|"UTF-8"
+argument_list|)
+decl_stmt|;
+name|this
+operator|.
+name|zkClient
+operator|.
+name|create
+argument_list|(
+name|getNode
+argument_list|,
+name|data
+argument_list|,
+name|CreateMode
+operator|.
+name|PERSISTENT
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|File
+name|file
+init|=
+operator|new
+name|File
+argument_list|(
+name|TEMP_DIR
+argument_list|,
+literal|"solrtest-getfile-"
+operator|+
+name|this
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|"-"
+operator|+
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|String
+index|[]
+name|args
+init|=
+operator|new
+name|String
+index|[]
+block|{
+literal|"-zkhost"
+block|,
+name|zkServer
+operator|.
+name|getZkAddress
+argument_list|()
+block|,
+literal|"-cmd"
+block|,
+literal|"getfile"
+block|,
+name|getNode
+block|,
+name|file
+operator|.
+name|getAbsolutePath
+argument_list|()
+block|}
+decl_stmt|;
+name|ZkCLI
+operator|.
+name|main
+argument_list|(
+name|args
+argument_list|)
+expr_stmt|;
+name|byte
+index|[]
+name|readData
+init|=
+name|FileUtils
+operator|.
+name|readFileToByteArray
+argument_list|(
+name|file
+argument_list|)
+decl_stmt|;
+name|assertArrayEquals
+argument_list|(
+name|data
+argument_list|,
+name|readData
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testGetFileNotExists
+specifier|public
+name|void
+name|testGetFileNotExists
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|getNode
+init|=
+literal|"/getFileNotExistsNode"
+decl_stmt|;
+name|File
+name|file
+init|=
+operator|new
+name|File
+argument_list|(
+name|TEMP_DIR
+argument_list|,
+literal|"solrtest-getfilenotexists-"
+operator|+
+name|this
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|"-"
+operator|+
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|String
+index|[]
+name|args
+init|=
+operator|new
+name|String
+index|[]
+block|{
+literal|"-zkhost"
+block|,
+name|zkServer
+operator|.
+name|getZkAddress
+argument_list|()
+block|,
+literal|"-cmd"
+block|,
+literal|"getfile"
+block|,
+name|getNode
+block|,
+name|file
+operator|.
+name|getAbsolutePath
+argument_list|()
+block|}
+decl_stmt|;
+try|try
+block|{
+name|ZkCLI
+operator|.
+name|main
+argument_list|(
+name|args
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Expected NoNodeException"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|KeeperException
+operator|.
+name|NoNodeException
+name|ex
+parameter_list|)
+block|{     }
 block|}
 annotation|@
 name|Override
